a11y: minor fix for contrast colors

--- a/Frontend/src/app/core-ui-module/components/node-entries/node-entries-card/node-entries-card.main.scss
+++ b/Frontend/src/app/core-ui-module/components/node-entries/node-entries-card/node-entries-card.main.scss
@@ -12,7 +12,7 @@ $optionBarHeight: 50px;
     height: 100%;
     grid-template-columns: auto;
     @include contrastMode {
-        border: 1px solid rgba(black, 0.54);
+        border: 1px solid rgba(black, 0.42);
     }
     .dropdown-dummy {
         position: fixed;
